--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,13 @@
 {
 	"resource": {
-		"localpath": "/Users/sjjwind/Desktop/MyBlog/src/view"
+		"localpath": "/home/wind/Project/MyBlog/src/view"
 	},
 	"net": {
-		"port": 8080
-	}
+		"port": 80
+	},
+	"storage": {
+		"blog": "/home/wind/Storage/blog",
+		"img": "/home/wind/Storage/img"
+	},
+	"tmp": "/home/wind/Storage/tmp"
 }
