modify UI and logic

--- a/default.conf
+++ b/default.conf
@@ -1,4 +1,17 @@
 {
+	"open": {
+		"account": {
+			"qq": {
+				"key": "101324961",
+				"secret": "7caf8158aa01f9a7dd44ac7265ca7e4f"
+			}, 
+			"weibo": {
+				"key": "",
+				"secret": "",
+				"url": ""
+			}
+		}
+	},
 	"resource": {
 		"localpath": "/home/wind/Project/MyBlog/src/view"
 	},
