modify some html url.

--- a/default.conf
+++ b/default.conf
@@ -12,11 +12,15 @@
 			}
 		}
 	},
+	"owner": {
+		"name": "风"
+	},
 	"resource": {
 		"localpath": "/home/wind/Project/MyBlog/src/view"
 	},
 	"net": {
-		"port": 80
+		"port": 80,
+		"host": "blog.windy.live"
 	},
 	"storage": {
 		"blog": "/home/wind/Storage/blog",
