using redis session instead of memory

--- a/default.conf
+++ b/default.conf
@@ -1,5 +1,8 @@
 {
-	"open": {
+	"blog": {
+		"owner": {
+			"name": "风"
+		},
 		"account": {
 			"qq": {
 				"key": "101324961",
@@ -10,10 +13,21 @@
 				"secret": "",
 				"url": ""
 			}
+		},
+		"storage": {
+			"file": {
+				"blog": "/home/wind/Storage/blog",
+				"img": "/home/wind/Storage/img",
+				"tmp": "/home/wind/Storage/tmp"
+			}, 
+			"session": {
+				"type": "redis",
+				"port": "6379",
+				"host": "localhost",
+				"password": "123456",
+				"db": 1
+			}
 		}
-	},
-	"owner": {
-		"name": "风"
 	},
 	"resource": {
 		"localpath": "/home/wind/Project/MyBlog/src/view"
@@ -21,10 +35,5 @@
 	"net": {
 		"port": 80,
 		"host": "blog.windy.live"
-	},
-	"storage": {
-		"blog": "/home/wind/Storage/blog",
-		"img": "/home/wind/Storage/img"
-	},
-	"tmp": "/home/wind/Storage/tmp"
+	}
 }
