--- a/default.conf
+++ b/default.conf
@@ -9,9 +9,8 @@
 				"secret": "7caf8158aa01f9a7dd44ac7265ca7e4f"
 			}, 
 			"weibo": {
-				"key": "",
-				"secret": "",
-				"url": ""
+				"key": "1523189451",
+				"secret": "b2a16339466248e8c1c580b466531250"
 			}
 		},
 		"storage": {
