1. change upload tool. 2. change markdown tool.

--- a/default.conf
+++ b/default.conf
@@ -1,7 +1,9 @@
 {
 	"blog": {
 		"owner": {
-			"name": "风"
+			"name": "风",
+			"authUserName": "sjjwind",
+			"authPassword": "123456"
 		},
 		"account": {
 			"qq": {
@@ -15,9 +17,8 @@
 		},
 		"storage": {
 			"file": {
-				"blog": "/home/wind/Storage/blog",
-				"img": "/home/wind/Storage/img",
-				"tmp": "/home/wind/Storage/tmp"
+				"raw": "home/wind/Storage/raw",
+				"blog": "/home/wind/Storage/blog"
 			}, 
 			"session": {
 				"type": "redis",
