--- a/default.conf
+++ b/default.conf
@@ -17,7 +17,7 @@
 		},
 		"storage": {
 			"file": {
-				"raw": "home/wind/Storage/raw",
+				"raw": "/home/wind/Storage/raw",
 				"blog": "/home/wind/Storage/blog"
 			}, 
 			"session": {
