add plugin chess

--- a/default.conf
+++ b/default.conf
@@ -30,7 +30,8 @@
 		}
 	},
 	"resource": {
-		"localpath": "/home/wind/Project/MyBlog/src/view"
+		"localpath": "/home/wind/Project/MyBlog/src/view",
+		"pluginpath": "/home/wind/Project/MyBlog/src"
 	},
 	"net": {
 		"port": 80,
