--- a/default.conf
+++ b/default.conf
@@ -28,6 +28,7 @@
             "cache": "/home/wind/Storage/cache",
             "res": "/home/wind/Project/blog/src/view",
             "build": "/tmp/11111978-8223-11e6-9480-7831c1c81ccc/build",
+            "tool": "/home/wind/Project/blog/tools",
             "tmp": "/tmp/11111978-8223-11e6-9480-7831c1c81ccc/tmp"
         },
         "session": {
@@ -45,6 +46,7 @@
     },
 	"net": {
 		"port": 80,
+		"listen_port": 9999,
 		"host": "windyx.com",
 		"protocol": "http"
 	}
